Refactor code across multiple modules for optimization
Changes include shift from MongoConfig from 'opencdx-commons' to 'CommonsConfig', clean-up of unnecessary null initializations, efficient use of StringBuilder for toString methods and optimization of certain methods for better performance. Some trivial modifications are also done to improve the code readability and documentation.